# pygzctfapi

./: .gitignore  LICENSE  README.md  pyproject.toml
pygzctfapi/: __init__.py  classes.py  constants.py  controllers.py  exceptions.py  models.py  pygzctfapi.py  utils.py  variables.py
pygzctfapi/misc/: events.py  models.py  routers.py  storages.py  trackers.py  updates.py
src/pygzctfapi/: __init__.py  constants.py  controllers.py  exceptions.py  models.py  pygzctfapi.py  utils.py
src/pygzctfapi/misc/: dispatchers.py  events.py  routers.py  storages.py  trackers.py  updates.py
tests/: gzctfapi_test.py  misc_test.py  utils_test.py
