[tool.poetry]
name = "pygzctfapi"
version = "0.0.1"
description = "Python wrapper for the GZCTF platform API."
authors = ["NullByte"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
