[tool.poetry]
name = "pygzctfapi"
version = "0.0.1"
description = "Python client for the GZCTF platform API."
authors = ["NullByte OpenSecurity <admin@nullbyte.pro>", "FazaN <fazan@nullbyte.pro>"]
license = "MIT License"
readme = "README.md"

packages = [
    { include = "pygzctfapi", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
msgpack = "^1.1.0"

[tool.poetry.extras]
redis = ["redis"]
leveldb = ["plyvel"]

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
pytest = "^8.3.3"
redis = "^5.1.1"
plyvel = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
